--- a/css/style.css
+++ b/css/style.css
@@ -391,7 +391,7 @@ input[type="checkbox"] {
     color: #dda615;
 }
 .bg-pink {
-    background-color: rgba(227,191,182,0.1);
+    background-color: #FFF9EB;
 }
 
 
