--- a/yoga/css/style.css
+++ b/yoga/css/style.css
@@ -77,7 +77,7 @@ a:hover{
     background-color: #F5F5F5;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: #33c9dd;
+    background-color: #D38F01;
     background-image: -webkit-gradient(linear, 0 0, 0 100%,
     color-stop(.5, rgba(255, 255, 255, .2)),
     color-stop(.5, transparent), to(transparent));
@@ -108,9 +108,9 @@ a:hover{
     transition: 0.8s;
     border-radius: 100%;
     background-size: 200% auto;
-    background-image: -webkit-gradient(linear, left top, right top, from(#8579e0), color-stop(51%, #d043ca), to(#8579e0));
-    background-image: -o-linear-gradient(left, #8579e0 0%, #d043ca 51%, #8579e0 100%);
-    background-image: linear-gradient(to right, #8579e0 0%, #d043ca 51%, #8579e0 100%);
+    background-image: -webkit-gradient(linear, left top, right top, from(#D38F01), color-stop(51%, #D38F01), to(#D38F01));
+    background-image: -o-linear-gradient(left, #D38F01 0%, #D38F01 51%, #D38F01 100%);
+    background-image: linear-gradient(to right, #D38F01 0%, #D38F01 51%, #D38F01 100%);
 
 }
 .scroll-top-arrow:hover{
@@ -278,10 +278,10 @@ a.before:before,a.after:after{
 a.before:before,a.after:after{
     height:2.2px;
     width:0;
-    background: #33c9dd !important;
+    background: #D38F01 !important;
 }
 .navbar-light .navbar-nav .nav-link:hover{
-    color: #33c9dd !important;
+    color: #D38F01 !important;
 }
 .navbar-light .navbar-nav .nav-link {
     color: #000000 !important;
@@ -384,12 +384,12 @@ a.before:before,a.after:after{
     width: 60%;
     height: 67%;
     bottom: 1%;
-    background-color: #33c9dd;
+    background-color: #CAA8F5;
 }
 .colored_heading{
     font-family:'Open Sans', sans-serif;
     font-size: 20px;
-    color: #4ed0e2;
+    color: #CAA8F5;
     margin-bottom: 0;
     letter-spacing: 0;
 }
@@ -437,9 +437,9 @@ a.before:before,a.after:after{
     -o-transition: 0.5s;
     transition: 0.5s;
     background-size: 200% auto;
-    background-image: -webkit-gradient(linear, left top, right top, from(#8579e0), color-stop(51%, #d043ca), to(#8579e0));
-    background-image: -o-linear-gradient(left, #8579e0 0%, #d043ca 51%, #8579e0 100%);
-    background-image: linear-gradient(to right, #8579e0 0%, #d043ca 51%, #8579e0 100%);
+    background-image: -webkit-gradient(linear, left top, right top, from(#D38F01), color-stop(51%, #D38F01), to(#D38F01));
+    background-image: -o-linear-gradient(left, #8E6101 0%, #8E6101 51%, #8E6101 100%);
+    background-image: linear-gradient(to right, #D38F01 0%, #D38F01 51%, #D38F01 100%);
     border: none;
 }
 
@@ -870,7 +870,7 @@ figure.snip0015:hover figcaption::before {
     border-radius: 10px;
 }
 .owl-testimonial .owl-item:not(.center) .testimonial-box:hover{
-    background-color: #33c9dd;
+    background-color: #D38F01;
 }
 .testimonial-box:hover .quote_box{
     background-color: white;
@@ -879,7 +879,7 @@ figure.snip0015:hover figcaption::before {
     color: white !important;
 }
 .testimonial-box:hover .quote{
-    color: #33c9dd;
+    color: #D38F01;
 }
 .owl-testimonial .center .quote_box{
     background-image: -webkit-linear-gradient( 180deg, #cf43ca 20%, #8579e0 100%);
@@ -933,7 +933,7 @@ figure.snip0015:hover figcaption::before {
     border-radius: 50px;
     width: 60px;
     height: 60px;
-    background: #33c9dd;
+    background: #D38F01;
     padding: 15px 10px 10px 14px;
     position: absolute;
     bottom: 83.5%;
@@ -957,7 +957,7 @@ figure.snip0015:hover figcaption::before {
     letter-spacing: 0;
 }
 .blue_text{
-    color: #33c9dd;
+    color: #D38F01;
 }
 #testimonials .text{
     position: absolute;
@@ -972,11 +972,11 @@ figure.snip0015:hover figcaption::before {
     margin-top: 40px !important;
 }
 .owl-testimonial .owl-dots .owl-dot.active span, .owl-testimonial .owl-dots .owl-dot:hover span{
-    background: #33c9dd;
+    background: #D38F01;
 }
 .owl-testimonial .owl-dots .owl-dot span{
     background: white;
-    border: 2px solid #33c9dd;
+    border: 2px solid #D38F01;
     font-size: 30px;
     padding: 5px;
 }
@@ -1067,7 +1067,7 @@ li.footer_list{
 }
 li.footer_list:hover{
     color: white;
-    background-color: #33c9dd;
+    background-color: #CAA8F5;
     -webkit-animation: .8s ease;
     animation: .8s ease;
 }
@@ -2008,7 +2008,7 @@ span{
     font-family: 'Raleway', sans-serif;
 }
 .quote_text:hover .quote{
-    color: #33c9dd;
+    color: #D38F01;
 }
 .quote_text:hover .verticle_lineQ{
     background-color: #333333;
@@ -2019,7 +2019,7 @@ span{
 .verticle_lineQ {
     width: 2.3px;
     height: 75px;
-    background-color:#33c9dd;
+    background-color:#D38F01;
     text-align: right;
     margin-top: -87px;
     margin-left: 38.7rem;
@@ -2218,7 +2218,7 @@ span{
         width: 60%;
         height: 67%;
         bottom: 1%;
-        background-color: #33c9dd;
+        background-color: #D38F01;
     }
     .gradient_rectangle {
         position: absolute;
@@ -2284,7 +2284,7 @@ span{
         width: 60%;
         height: 67%;
         bottom: 5%;
-        background-color: #33c9dd;
+        background-color: #D38F01;
     }
     .gradient_rectangle{
         position: absolute;
@@ -2305,7 +2305,7 @@ span{
     .colored_heading {
         font-family: 'Open Sans', sans-serif;
         font-size: 18px;
-        color: #4ed0e2;
+        color: #D38F01;
         margin-bottom: 0;
     }
     .heading {
