--- a/yoga/css/style.css
+++ b/yoga/css/style.css
@@ -124,7 +124,7 @@ a:hover{
     padding-top: 15px;
 }
 .navbar-appear {
-    z-index: 11;
+    z-index: ;
     position: fixed;
     top: 0;
     left:0;
