--- a/yoga/css/style.css
+++ b/yoga/css/style.css
@@ -136,7 +136,7 @@ a:hover{
 }
 .navbar.fixed-menu {
     padding: 15px 70px 15px 70px;
-    z-index: ;
+    z-index: 11;
     position: fixed;
     top: 0;
     left:0;
