--- a/yoga/css/style.css
+++ b/yoga/css/style.css
@@ -49,7 +49,7 @@ a:hover{
 #loading-area {
     width: 100%;
     height: 100%;
-    background-color: #f6fcff;
+    background-color: #ffffff;
     position: fixed;
     left: 0;
     top: 0;
