--- a/yoga/css/style.css
+++ b/yoga/css/style.css
@@ -347,7 +347,7 @@ a.before:before,a.after:after{
 }
 
 /****************ABOUT YOGA SECTION*****************/
-#about_yoga{
+#about{
     padding-top: 125px;
     padding-bottom: 125px;
     overflow: hidden !important;
